# spectral

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.h  Camera.hpp  Intersection.hpp  Mesh.hpp  ObjLoader.h  Object.hpp  Ray.hpp  Scene.hpp  main.cc  main.cpp  math.hpp  utils.h  utils.hpp
src/geometry/: AABB.cc  AABB.h  BVH.cc  BVH.h  HitRecord.h  Mesh.cc  Mesh.h  Object.h  Ray.h  Scene.cc  Scene.h  Sphere.cc  Sphere.h  Transform.cc  Transform.h  Triangle.cc  Triangle.h
src/materials/: Dielectric.cc  Dielectric.h  Material.h
src/textures/: Image.h  ImageTexture.cc  ImageTexture.h  Texture.h
